--- a/client/styles.css
+++ b/client/styles.css
@@ -2,4 +2,40 @@
 
 /* Note: an asteroid image is included in this repo.
 Feel free to use it if you like. */
-
+.container {
+  width: 100%;
+  display: flex;
+}
+.col-3 {
+  width: 25%;
+}
+.col-6 {
+  width: 50%;
+}
+.header {
+  background-color: #585858;
+  height: 75px;
+  text-align: center;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+}
+.gamespace {
+  background-color: #000000;
+  height: 500px;
+}
+.scoreboard {
+  float: right;
+  clear: right;
+  background-color: #e6e6e6;
+  margin-right: 10px;
+  margin-top: 10px;
+  padding: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 5px;
+}
+.game-area {
+  height: 100%;
+  width: 100%;
+}
