Implement simple score board

--- a/client/styles.css
+++ b/client/styles.css
@@ -13,6 +13,7 @@ Feel free to use it if you like. */
   width: 50%;
 }
 .header {
+  display: flex;
   background-color: #585858;
   height: 75px;
   text-align: center;
@@ -31,14 +32,9 @@ Feel free to use it if you like. */
   display: block;
 }
 .scoreboard {
-  float: right;
-  background-color: #e6e6e6;
-  margin-right: 10px;
-  margin-top: 10px;
-  padding: 10px;
+  height: 100%;
   font-size: 18px;
   font-weight: bold;
-  border-radius: 5px;
 }
 .game-area {
   height: 100%;
